xwfc/css/base.css
body {
	font-family: 'Montserrat', sans-serif;
    font-size: large;
    font-variant: small-caps;
    background-image: url('../images/background.jpg');
}

table {
    font-variant: small-caps;
}

button {
    text-shadow: 1px 1px 0px grey;
}

span.dot {
	font-size: 0.5em;
	vertical-align: middle;
	padding-right: 0.5em;
	padding-bottom: 0.5em;
}

div.popup {
	position: fixed;
	background-color: #FAFAFA;
    width: 90%;
    height: 90%;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	margin: auto;
	border: 1px solid black;
	border-radius: 5px;
	padding-left: 1em;
	padding-right: 1em;
	overflow: auto;
    display: none;
}

div.popup table {
	min-width: 100%;
    margin-bottom: 0.5em;
}

button {
    text-transform: uppercase;
}

button.close {
	float: right;
	margin-top: 0.5em;
}

a.sort {
	float: right;
	text-decoration: none;
	color: black;
}

#Main {
	position: fixed;
    background-color: rgba(250, 250, 250, 0.5);
	width: 90%;
	height: 100%;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	margin: auto;
	padding-left: 1em;
	padding-right: 1em;
	overflow: auto;
	text-align: center;
}

.right {
	text-align: right;
}

table thead {
    text-transform: uppercase;
}

table th span {
	margin-right: 1em;
}

#Main table {
	width: 100%;
}

table th:first-child {
    width: 50%;
}

@media only screen and (min-width: 1025px) {
    div.popup {
        width: 80%;
        height: 80%;
    }
}

@media only screen and (min-width: 1600px) {
    div.popup {
        width: 60%;
        height: 60%;
    }
    
    #Main {
        width: 80%;
    }
    
    table tr {
        white-space: nowrap;
    }
}

table td {
    font-size: large !important;
}

tr.owned {
    background-color: #F0F0F0;
    color: #7F7F7F;
}

#Main table tfoot {
    background-color: rgba(250, 250, 250, 0.3);
}

table#FileLoad {
    display: none;
    width: 100%;
	margin: auto;
}

select#FleetType {
    position: absolute;
    right: 0;
    margin-top: 0.5em;
    margin-right: 0.5em;
    font-size: x-large;
}

select#FleetType option[value="Imperial"] {
    text-shadow: 1px 1px 0px red;
}

select#FleetType option[value="Rebel"] {
    text-shadow: 1px 1px 0px blue;
}

.disabled {
    color: gray;
    background-color: lightgray;
}

a.tooltip {
    text-decoration: none;
    color: black;
}

a.tooltip span.image {
    display: none;
    padding: 0.5em;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid grey;
    background-color: #FAFAFA;
    border-radius: 20px;
    box-shadow: 5px 5px 8px grey;
}

a.tooltip:hover span.image {
    display: inline;
}

